--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: <bruce name>
+description: <bruce is describling...>
+github_username: brucehho
+facebook_username: Bruce hungban ho
+
+
 theme: jekyll-theme-time-machine
